--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/sarmistha2001/Amazon-login/issues"
   },
-  "homepage": "https://github.com/sarmistha2001/Amazon-login#readme"
+  "homepage": "https://github.com/sarmistha2001/Amazon-login#readme",
+  "dependencies": {
+    "bootstrap": "^5.2.1",
+    "bootstrap-icons": "^1.9.1"
+  }
 }
